--- a/GA_Shane/a6_feature_selection.ipynb
+++ b/GA_Shane/a6_feature_selection.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 6,
    "id": "e449e9c4",
    "metadata": {},
    "outputs": [],
@@ -1934,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "675e2c7a",
    "metadata": {},
    "outputs": [],
@@ -1952,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 1,
    "id": "f604e5a6",
    "metadata": {},
    "outputs": [
@@ -2040,7 +2040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 2,
    "id": "0dc66136",
    "metadata": {},
    "outputs": [
@@ -2076,29 +2076,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a1f7b485",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.4947317575281822, 0.06710336045272891)"
+       "(0.5884927820314702, 0.1332321168649655)"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X['test'] = X['close'].diff(7).rolling(3).mean()\n",
+    "X['test'] = X['close'].diff(7)\n",
     "_s(X,'test')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 8,
    "id": "704125e7",
    "metadata": {},
    "outputs": [
@@ -2134,7 +2134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 9,
    "id": "ce53ea67",
    "metadata": {},
    "outputs": [
@@ -2144,7 +2144,7 @@
        "0.9604541901286103"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2343,53 +2343,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3caca65e",
+   "execution_count": 628,
+   "id": "974c3627",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-0.10956041900287358, 0.0024381219152843636)"
+       "(-0.12449730874405661, 0.0018616024844065882)"
       ]
      },
-     "execution_count": 594,
+     "execution_count": 628,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "w = 10\n",
-    "x = np.array(X['state'].shift(1))\n",
-    "X['lziv_complexity'] = np.nan  # Initialize with NaNs\n",
-    "valid_mask = ~np.isnan(x)\n",
-    "X['lziv_complexity'] = rolling_apply(ant.lziv_complexity,x[valid_mask],w,)\n",
-    "_s(X,'lziv_complexity')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "974c3627",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w = 10\n",
     "# x = np.array(X['high'].diff())\n",
     "# x = np.array(X['close'].diff())\n",
     "x = np.array((X['close'].rolling(5).max()).diff())\n",
     "x = np.array((X['high'].rolling(5).max()).diff())\n",
-    "x = np.array((X['low'].rolling(5).max()).diff())\n",
+    "# x = np.array((X['low'].rolling(5).max()).diff())\n",
     "\n",
     "\n",
-    "X['svd_entropy'] = rolling_apply(ant.num_zerocross,x,w,)\n",
-    "_s(X,'svd_entropy')"
+    "X['num_zerocross'] = rolling_apply(ant.num_zerocross,x,w,)\n",
+    "_s(X,'num_zerocross')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f0424d79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.29698183902792014, 0.03669297783255909)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import scipy\n",
+    "w = 10\n",
+    "x = np.array(X['close'].diff(5).cumsum())\n",
+    "\n",
+    "X['num_zerocross'] = rolling_apply(scipy.stats.skew,x,w,)\n",
+    "_s(X,'num_zerocross')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ffc91f4",
+   "id": "59681c9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.3661843942864122, 0.06615163339763874)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w = 5\n",
+    "x = np.array(X['close'].diff(9).cumsum())\n",
+    "\n",
+    "X['skew'] = rolling_apply(scipy.stats.skew,x,w,)\n",
+    "_s(X,'skew')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "163961f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-0.0016791415978531122, 4.5198982728145154e-05)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w = 5\n",
+    "x = np.array(X['close'].diff().cumsum())\n",
+    "\n",
+    "X['kurtosis'] = rolling_apply(scipy.stats.kurtosis,x,w,)\n",
+    "_s(X,'kurtosis')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65633673",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.17506276871042534, 0.009969147537358669)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w = 10\n",
+    "x = np.array(X['close'].diff(7).cumsum())\n",
+    "\n",
+    "X['kstat'] = rolling_apply(scipy.stats.kstat,x, w,3)\n",
+    "\n",
+    "_s(X,'kstat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "1134c6d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5436046548672693, 0.11335807809726561)"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w = 20\n",
+    "x = np.array(X['close'].diff().cumsum())\n",
+    "x = np.array(X['high'].diff().cumsum())\n",
+    "x = np.array(X['open'].diff().cumsum())\n",
+    "x = np.array(X['low'].diff().cumsum())\n",
+    "x = np.array(X['state_p'].shift(1).diff())\n",
+    "x = np.array(X['close'].diff())\n",
+    "x = np.array(X['close'].diff(7))\n",
+    "# x = np.array(X['close'].diff(10))\n",
+    "\n",
+    "X['rankdata'] = rolling_apply_last(scipy.stats.rankdata,x, w,)\n",
+    "\n",
+    "_s(X,'rankdata')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a1de275",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.4310976209610082, 0.06720779807604493)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2dff747",
    "metadata": {},
    "outputs": [],
    "source": []
