rename files and add bars preparation other than 1 minute.

--- a/GA_Shane/ab4_benchmark_fe2.ipynb
+++ b/GA_Shane/ab4_benchmark_fe2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "91c86221",
    "metadata": {},
    "outputs": [],
@@ -19,9 +19,9 @@
     "label = 30\n",
     "test_start = '2023-01-01'\n",
     "reduncy_rows = 50\n",
-    "fix = 513\n",
+    "fix = 713\n",
     "\n",
-    "part = '20250410_handmade'\n",
+    "part = '20250426_023509_YvmTj7'\n",
     "dir = f'E:/dragon/GA_Shane/outputs/{part}'\n",
     "os.chdir(dir)\n",
     "\n",
