添加了实盘推理的数据更新和axis合并功能。

--- a/infer/a0_kline_reader.ipynb
+++ b/infer/a0_kline_reader.ipynb
@@ -7,35 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from dotenv import load_dotenv\n",
-    "import clickhouse_connect\n",
-    "\n",
-    "# Load environment variables\n",
-    "load_dotenv()\n",
-    "\n",
-    "# --- ClickHouse Configuration ---\n",
-    "CH_HOST = os.getenv('CH_HOST', 'localhost')\n",
-    "CH_PORT = int(os.getenv('CH_PORT', '18123')) # Often 8123 for HTTP, 9000 for native. Check your setup.\n",
-    "CH_USER = os.getenv('CH_USER', 'default')\n",
-    "CH_PASSWORD = os.getenv('CH_PASSWORD', '') # Default to empty string if not set\n",
-    "CH_DATABASE = os.getenv('CH_DATABASE', 'default') # Optional: specify default database\n",
-    "\n",
-    "# --- ClickHouse Connection ---\n",
-    "def get_clickhouse_client():\n",
-    "    \"\"\"\n",
-    "    Creates and returns a ClickHouse client instance.\n",
-    "    Raises ConnectionError if connection fails immediately.\n",
-    "    \"\"\"\n",
-    "    # Recommended: Use database parameter during client creation\n",
-    "    client = clickhouse_connect.get_client(\n",
-    "        host='localhost',\n",
-    "        port='18123',\n",
-    "        user='default',\n",
-    "        password='chdefault!9',\n",
-    "        database='cn_futures', # Connect directly to the default DB if needed\n",
-    "    )\n",
-    "    return client"
+    "import "
    ]
   },
   {
